<?xml version="1.0"?>
<package>
  <name>teleop_keyboard_omni3</name>
  <version>0.6.2</version>
  <description>Generic keyboard teleop for 3 wheeled omnidirectional robots.</description>

  <maintainer email="yugajmera@gmail.com">YugAjmera</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>YugAjmera</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
