<?xml version="1.0"?>
<package>
  <name>teleop_keyboard_omni3</name>
  <version>1.0</version>
  <description>Generic keyboard teleop for 3 wheeled omnidirectional robots.</description>

  <maintainer email="yugajmera@gmail.com">YugAjmera</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/teleop_keyboard_omni3</url>

  <author>YugAjmera</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
